# pa-ws2526

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt
functions/: functions.py
